--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,23 @@
-org.gradle.caching=true
+# Project-wide Gradle settings
+org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.caching=true
 org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.unsafe.configuration-cache=true
+
+# Kotlin
+kotlin.code.style=official
 kotlin.incremental=true
+kotlin.incremental.js=true
+kotlin.incremental.multiplatform=true
+kotlin.caching.enabled=true
+kotlin.parallel.tasks.in.project=true
+
+# Android
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableR8.fullMode=true
+android.enableBuildCache=true
+android.uniquePackageNames=true
+android.nonTransitiveRClass=true
