--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,23 +6,20 @@ concurrency:
 
 on:
   push:
-    branches:
-      - master
-      - main
-    paths-ignore:
-      - '*.md'
+    branches: [ master, main ]
+    paths-ignore: [ '*.md' ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
         with:
           path: "src"
 
       - name: Checkout builds
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
         with:
           ref: "builds"
           path: "builds"
@@ -31,11 +28,11 @@ jobs:
         run: rm $GITHUB_WORKSPACE/builds/*.cs3 || true
 
       - name: Setup JDK 11
-        uses: actions/setup-java@v3  # Updated to v3
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # Specify distribution
+          distribution: 'temurin'
           java-version: 11
-          cache: 'gradle'  # Enable Gradle caching
+          cache: 'gradle'
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
@@ -52,12 +49,10 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build Plugins
-        env:
-          GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true -Dorg.gradle.workers.max=2 -Dkotlin.incremental=true"
         run: |
           cd $GITHUB_WORKSPACE/src
           chmod +x gradlew
-          ./gradlew make makePluginsJson --no-daemon --build-cache
+          ./gradlew make makePluginsJson --no-daemon --build-cache --parallel
           cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
           cp build/plugins.json $GITHUB_WORKSPACE/builds
 
